--- a/login.html
+++ b/login.html
@@ -7,10 +7,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
-    <link rel="stylesheet" href="./ULT-HTML/css/style.css">
+    <link rel="stylesheet" href="./style.css/style.css">
 
 </head>
 <body>
     
+    <form action=""   method="get">
+
+    <label for="nombreCompleto">Nombre Completo</label>
+    <input type="text" name="nombreCompleto" id="nombreCompleto">
+
+    <label for="nombreUsuario">Nombre de usuario</label>
+    <input type="text" name="nombreUsuario" id="nombreUsuario">
+
+    <label for="password">Contraseña</label>
+    <input type="password" name="password" id="password"  >
+
+    <label for="password">Repetir contraseña</label>
+    <input type="password" name="re_password" id="re_password"  >
+
+    <label for="pais">Selecciona tu pais</label>
+    </form>
+
+    <select name="pais" id="pais">
+        <option value="AR">Argentina</option>
+        <option value="BR">Brasil</option>
+        <option value="PY">Paraguay</option>
+        <option value="UY">Uruguay</option>
+        <option value="CO">Colombia</option>
+    </select>
+
+    <p>
+  
+      genero<br>
+  
+      <input type="radio" name="genero" value="masculino"> Masculino<br>
+  
+      <input type="radio" name="genero" value="femenino"> Femenino<br>
+  
+  
+    </p>
+  
+    <p><input type="submit" value="Enviar datos"></p>
+  
+    <label for="nacimiento">Fecha de nacimiento</label>
+    <input type="date" name="nacimiento" id="nacimiento">
+
+    <label for="phone">Enter your phone number:</label>
+
+    <input id="telNo" name="telNo" type="tel"
+       size="20" minlength="9" maxlength="14">
+
+    <label><input type="checkbox" id="cbox1" value="first_checkbox"> Acepto los terminos y condiciones</label><br>
+
+ 
+    <input type="submit" value="Registrarme">
+
+
+
 </body>
 </html>
